--- a/MilleniumIOS/Main.storyboard
+++ b/MilleniumIOS/Main.storyboard
@@ -128,11 +128,12 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="Zdj-J7-mma" userLabel="Controls Stack View">
-                                <rect key="frame" x="126.5" y="160" width="124" height="44"/>
+                                <rect key="frame" x="152.5" y="160" width="72" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afd-5L-Tkr" userLabel="PlayButton">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="44"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="mTn-IH-Vph"/>
                                             <constraint firstAttribute="width" constant="50" id="uFc-mt-udD"/>
                                         </constraints>
                                         <state key="normal" image="btn-play">
@@ -144,25 +145,12 @@
                                         </connections>
                                     </button>
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Dsq-mJ-DLL">
-                                        <rect key="frame" x="52" y="0.0" width="20" height="44"/>
+                                        <rect key="frame" x="52" y="0.0" width="20" height="50"/>
                                     </activityIndicatorView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hFO-pQ-w0a" userLabel="PauseButton">
-                                        <rect key="frame" x="74" y="0.0" width="50" height="44"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="50" id="FUJ-b2-7PI"/>
-                                        </constraints>
-                                        <state key="normal" image="btn-stop">
-                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        </state>
-                                        <state key="selected" image="btn-pause"/>
-                                        <connections>
-                                            <action selector="StopButton:" destination="jEW-AF-5pN" eventType="touchUpInside" id="X5V-bF-PXZ"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="BP9-WG-CLr" userLabel="Labels Stack View">
-                                <rect key="frame" x="38.5" y="220" width="300" height="85"/>
+                                <rect key="frame" x="38.5" y="226" width="300" height="85"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="PmO-vC-rHX" userLabel="Song Label" customClass="SpringLabel" customModule="MilleniumIOS" customModuleProvider="target">
                                         <rect key="frame" x="25" y="0.0" width="250" height="31.5"/>
@@ -191,7 +179,7 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Les 5 derniers sons diffusés :" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="GQM-X6-SMG" userLabel="Last5Songs Label">
-                                <rect key="frame" x="6" y="346.5" width="272" height="24"/>
+                                <rect key="frame" x="6" y="352.5" width="272" height="24"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -205,7 +193,7 @@
                                 </constraints>
                             </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Swz-XE-Kqi">
-                                <rect key="frame" x="17" y="388.5" width="343" height="137.5"/>
+                                <rect key="frame" x="17" y="394.5" width="343" height="137.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="288" id="RAt-wL-Id9"/>
@@ -298,6 +286,7 @@
                         <outlet property="ArtworkImg" destination="cwz-do-0TH" id="fOi-us-CcS"/>
                         <outlet property="CollectionView" destination="Swz-XE-Kqi" id="5Up-95-PRv"/>
                         <outlet property="LoadingWeel" destination="Dsq-mJ-DLL" id="d37-C9-ilz"/>
+                        <outlet property="PlayPauseButton" destination="afd-5L-Tkr" id="Ycx-v5-uf5"/>
                         <outlet property="SongName" destination="PmO-vC-rHX" id="jv2-ar-lWI"/>
                         <outlet property="artistLabel" destination="F9D-mJ-gxy" id="7bd-c4-S7c"/>
                         <outlet property="collectionView" destination="Swz-XE-Kqi" id="kAd-ew-82j"/>
@@ -316,7 +305,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <searchBar key="tableHeaderView" contentMode="redraw" id="qak-hI-vOK">
-                            <rect key="frame" x="0.0" y="0.0" width="336" height="44"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits"/>
                             <connections>
@@ -568,15 +557,18 @@
                                             <action selector="PlayButton:" destination="mxW-d0-DgZ" eventType="touchUpInside" id="hXI-xT-7Ow"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nPZ-6i-geg" userLabel="PauseButton">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MXt-RI-zHR" userLabel="PauseButton">
                                         <rect key="frame" x="52" y="0.0" width="50" height="44"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="50" id="bBV-hm-A9l"/>
+                                            <constraint firstAttribute="width" constant="50" id="yqE-Eb-i1b"/>
                                         </constraints>
-                                        <state key="normal" image="btn-stop">
+                                        <state key="normal" image="btn-pause">
                                             <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <state key="selected" image="btn-pause"/>
+                                        <connections>
+                                            <action selector="PauseButton:" destination="mxW-d0-DgZ" eventType="touchUpInside" id="RbG-Ch-mtn"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -686,7 +678,6 @@
         <image name="background" width="160" height="284"/>
         <image name="btn-pause" width="44" height="44"/>
         <image name="btn-play" width="44" height="44"/>
-        <image name="btn-stop" width="44" height="44"/>
         <image name="calendar" catalog="system" width="64" height="52"/>
         <image name="clock.fill" catalog="system" width="64" height="60"/>
         <image name="house" catalog="system" width="64" height="54"/>
