--- a/MilleniumIOS/Main.storyboard
+++ b/MilleniumIOS/Main.storyboard
@@ -342,8 +342,8 @@
                                                 <constraint firstAttribute="width" constant="67" id="mSv-c5-TWo"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="13/12/13 22H22" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0I-Sx-pqV">
-                                            <rect key="frame" x="106" y="67" width="128" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="13/12/13 22H22" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0I-Sx-pqV">
+                                            <rect key="frame" x="106" y="67" width="120" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -434,21 +434,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="68" id="aBq-jB-yhs" customClass="titleCell" customModule="MilleniumIOS" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="68"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="78" id="aBq-jB-yhs" customClass="titleCell" customModule="MilleniumIOS" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="78"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aBq-jB-yhs" id="ooJ-tS-KEF">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="68"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="78"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uzL-4n-bL3">
-                                            <rect key="frame" x="16" y="11" width="90" height="46"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uzL-4n-bL3">
+                                            <rect key="frame" x="16" y="11" width="90" height="55"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="67" id="laM-98-muv"/>
+                                                <constraint firstAttribute="width" constant="90" id="laM-98-muv"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Song Artist" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKP-LT-735" customClass="SpringLabel" customModule="MilleniumIOS" customModuleProvider="target">
-                                            <rect key="frame" x="124" y="1" width="288" height="66"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song Artist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKP-LT-735" customClass="SpringLabel" customModule="MilleniumIOS" customModuleProvider="target">
+                                            <rect key="frame" x="114" y="5" width="288" height="66"/>
                                             <accessibility key="accessibilityConfiguration" identifier="artist"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="bKP-LT-735" secondAttribute="height" multiplier="288:37" constant="-225.7297297297298" id="hFh-53-KVp"/>
@@ -461,10 +461,10 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="uzL-4n-bL3" firstAttribute="top" secondItem="ooJ-tS-KEF" secondAttribute="topMargin" id="34s-K9-1en"/>
-                                        <constraint firstItem="uzL-4n-bL3" firstAttribute="leading" secondItem="ooJ-tS-KEF" secondAttribute="leadingMargin" id="5YN-e5-CG6"/>
-                                        <constraint firstItem="bKP-LT-735" firstAttribute="top" secondItem="ooJ-tS-KEF" secondAttribute="topMargin" constant="-10" id="dDo-qr-bUn"/>
-                                        <constraint firstItem="bKP-LT-735" firstAttribute="leading" secondItem="uzL-4n-bL3" secondAttribute="trailing" constant="18" id="lzz-zC-IsD"/>
-                                        <constraint firstItem="uzL-4n-bL3" firstAttribute="bottom" secondItem="bKP-LT-735" secondAttribute="bottom" constant="-10" id="uew-H9-M4D"/>
+                                        <constraint firstItem="uzL-4n-bL3" firstAttribute="leading" secondItem="ooJ-tS-KEF" secondAttribute="leadingMargin" constant="-4" id="5YN-e5-CG6"/>
+                                        <constraint firstItem="bKP-LT-735" firstAttribute="top" secondItem="ooJ-tS-KEF" secondAttribute="topMargin" constant="-6" id="dDo-qr-bUn"/>
+                                        <constraint firstItem="bKP-LT-735" firstAttribute="leading" secondItem="uzL-4n-bL3" secondAttribute="trailing" constant="8" id="lzz-zC-IsD"/>
+                                        <constraint firstItem="uzL-4n-bL3" firstAttribute="bottom" secondItem="bKP-LT-735" secondAttribute="bottom" constant="-5" id="uew-H9-M4D"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <accessibility key="accessibilityConfiguration" identifier="cell"/>
@@ -484,7 +484,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zAB-HY-mir" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3949.5999999999999" y="872.11394302848578"/>
+            <point key="canvasLocation" x="3949.275362318841" y="871.875"/>
         </scene>
         <!--Replay Player Millenium-->
         <scene sceneID="yXk-3O-1jR">
