--- a/MilleniumIOS/Base.lproj/LaunchScreen.storyboard
+++ b/MilleniumIOS/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,14 +16,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="MilleniumLogo" translatesAutoresizingMaskIntoConstraints="NO" id="sfY-0U-ubf">
-                                <rect key="frame" x="0.0" y="55" width="414" height="787"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MilleniumLogo" translatesAutoresizingMaskIntoConstraints="NO" id="sfY-0U-ubf">
+                                <rect key="frame" x="0.0" y="54.333333333333314" width="414" height="787.33333333333348"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="sfY-0U-ubf" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ab1-ZD-gCN"/>
-                            <constraint firstItem="sfY-0U-ubf" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="dLB-vx-qRa"/>
+                            <constraint firstItem="sfY-0U-ubf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="93M-2T-z3V"/>
+                            <constraint firstItem="sfY-0U-ubf" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="p75-AH-tEh"/>
+                            <constraint firstItem="sfY-0U-ubf" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="wSL-Ij-Fao"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
